# MailQueryWithMCP

./: .aliases  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS_WINDOWS.md  Dockerfile.query-assistant  MCP_DEVELOPMENT_GUIDE.md  ParsingStrategy.md  README.md  REFACTORING_SUMMARY.md  RENDER_DEPLOYMENT.md  SSH_TUNNEL_SETUP.md  Todo  add_save_to_extraction.py  agenda_query_templates_final.json  agenda_query_templates_v2_examples.json  all_template_ids.txt  analyze_parameters.py  analyze_pending_reasons.py  analyze_questions_similarity.py  build_windows_exe.bat  bulk_template_uploader.py  check_final_status.py  check_krsdtp_db.py  claude_config_sse.json  claude_desktop_config.json  cloudflare-manager.sh  cloudflare-tunnel-config.yml  cloudflared.service  compare_similarity_methods.py  create_test_data.py  date_parameter_patterns.md  debug_llm_response.py  deploy-cloudflare-tunnel.sh  docker-compose.query-assistant.yml  download_iacs_pdfs.py  email_dashboard_event_flow.md  event_data_collector.py  external_connection_guide.md  file_replacer.py  (+102 more)
--template/: query_templates_group_001_test_report.md  query_templates_group_002_test_report.md  query_templates_group_003_test_report.md  query_templates_group_004_test_report.md  query_templates_group_005_test_report.md  query_templates_group_006_test_report.md  query_templates_group_007_test_report.md  query_templates_group_008_test_report.md  query_templates_group_009_test_report.md  test_results_summary_report.md
.claude/: rules.md
.clinerules/: ignore
docs/: CALENDAR_MCP_IMPLEMENTATION.md  CLAUDE_CONNECTOR_SETUP.md  CLAUDE_MCP_FLOW_DIAGRAM.md  CLOUDFLARE_TUNNEL_DEPLOYMENT.md  DATETIME_USAGE_GUIDE.md  DCR_IMPLEMENTATION.md  DCR_SCHEMA_OPTIMIZATION.md  MCP_Claude_AI_Connection_Troubleshooting.md  MCP_DEVELOPMENT_GUIDE.md  OAUTH_SCOPE_FIX_SUMMARY.md  PAGINATION_OPTIMIZATION_REPORT.md  TEAMS_OUTLOOK_CALENDAR_SYNC.md  apply_jsonrpc_logging.md  attachment-cleanup.md  claudeai-dcr.txt  cloudflare-free-tunnel-limitations.md  cloudflare-tunnel-subdomain.md  dcr-architecture-analysis.md  dcr-oauth-call-flow.md  dcr-unified-authentication.md  improvements.md  jsonrpc_logging_guide.md  logging-structure.md  mcp-architecture.md  mcp-logging.md  mock_claude_dataflow_analysis.md  mock_claude_detailed_dataflow_analysis.md  subdomain-architecture.md  subdomain-deployment-simple.md  unified-oauth-architecture.md
entrypoints/: README.md
infra/: README.md  __init__.py  implementation_plan.md  infra_readme_infra.md  readme_infra.md
mail_analysis_results/: 20250702_161610_334_no_subject.json  20250702_161610_500_no_subject.json  20250702_161610_790_no_subject.json  20250702_161610_842_no_subject.json  20250702_161611_090_no_subject.json  20250702_161615_508_no_subject.json  20250702_161620_059_no_subject.json  20250702_161620_232_no_subject.json  20250702_161620_629_no_subject.json  20250702_161621_264_no_subject.json  20250702_161621_622_no_subject.json  20250702_161623_498_no_subject.json  20250702_161625_359_no_subject.json  20250702_161626_082_no_subject.json  20250702_161626_538_no_subject.json  20250702_161626_842_no_subject.json  20250702_161628_017_no_subject.json  20250702_161630_149_no_subject.json  20250702_161630_919_no_subject.json  20250702_161630_939_no_subject.json  20250702_161631_357_no_subject.json  20250702_161631_370_no_subject.json  20250702_161634_278_no_subject.json  20250702_161635_340_no_subject.json  20250702_161635_886_no_subject.json  20250702_161636_092_no_subject.json
modules/: __init__.py
script/: check_and_add_content_hash.py  check_keyword.py  check_mail_processing_errors.py  mail_query_process.py  test_mail_db_save.py  test_new_mails_only.py
scripts/: check_accounts.sh  check_chat_member.py  check_kimghw_account.py  check_token_permissions.py  cleanup_oauth_tokens.py  cleanup_old_logs.sh  create_calendar_event_tomorrow.py  create_graphapi_db.py  extract_mail_data.py  find_all_self_chats.py  find_self_chat.py  fix_templates.py  generate_env_render.sh  init_query_assistant.py  mail_dashboard.py  mail_query.py  mail_query_attachment.py  mail_query_prcess_rev1.py  mail_query_process.py  mail_queue_dequeue_openrouter.py  mail_queue_enqueue.py  mail_queue_event.py  mail_sync_dashboard.sh  migrate_to_openai.py  monitor_mail_sync.sh  monitor_mcp.sh  run_query_assistant.py  send_to_notes.py  (+31 more)
(+632 files in other folders)
