[project]
name = "iacsgraph"
version = "0.1.0"
description = "IACSGraph project to process emails and extract keywords."
authors = [{ name = "Cline", email = "cline@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.5",
    "pydantic[email]>=2.0,<3.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "kafka-python>=2.0.2",
    "pyyaml>=6.0.2",
    "cryptography>=45.0.4",
]

[project.optional-dependencies]
dev = [
    "uv>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "black",
    "isort",
    "pytest>=8.4.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "infra*", "main*", "scheduler*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
