[project]
name = "mailquerywithmcp"
version = "0.1.0"
description = "Mail Query MCP Server with Microsoft Graph API integration"
authors = [{ name = "kimghw", email = "kimghw@example.com" }]
requires-python = ">=3.10"
dependencies = [
    # Core MCP Server
    "mcp>=0.1.0",

    # Microsoft Graph API
    "msgraph-sdk>=1.0.0",
    "azure-identity>=1.12.0",

    # Database & Data Processing
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0,<3.0",

    # Network & HTTP
    "aiohttp>=3.9.5",
    "requests>=2.31.0",

    # Configuration & Utils
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "cryptography>=45.0.4",
    "colorlog>=6.7.0",

    # File Processing
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "olefile>=0.46",

    # Event Streaming (Optional - for event-driven architecture)
    "kafka-python>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
hwp = [
    "pyhwp>=0.1b15",
]
sqlserver = [
    "pyodbc>=5.0.0",
]
postgresql = [
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "infra*", "main*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
